# CVPath

./: .gitignore  CMakeLists.txt  README.md  cvcreate
001-HelloCV/: CMakeLists.txt
001_HelloCV/: CMakeLists.txt
002_StartWithImages/: CMakeLists.txt  main.cpp
003_MatTheBasicImageContainer/: CMakeLists.txt  main.cpp
004_HowToScanImages/: CMakeLists.txt  main.cpp
005_MaskOperationsOnMatrices/: CMakeLists.txt  main.cpp
006_AddingTwoImages/: CMakeLists.txt  main.cpp
007_ChangingTheContrastAndBrightnessOfAnImage/: CMakeLists.txt  main.cpp
008_BasicDrawing/: CMakeLists.txt  main.cpp
009_RandomGeneratorAndText/: CMakeLists.txt  main.cpp
010_DiscreteFourierTransform/: CMakeLists.txt  main.cpp
011_FileInputAndOutputUsingXMLAndYAMLFiles/: CMakeLists.txt  main.cpp
012_HowToUseTheOpenCVParallel/: CMakeLists.txt  ParallelConvolution.cpp  ParallelConvolution.h  ParallelConvolutionRowSplit.cpp  ParallelConvolutionRowSplit.h  main.cpp
013_VectorizingYourCodeUsingUniversalIntrinsics/: CMakeLists.txt  main.cpp
014_SmoothingImages/: CMakeLists.txt  main.cpp
015_ErodingAndDilating/: CMakeLists.txt  main.cpp
016_MoreMorphologyTransformations/: CMakeLists.txt  main.cpp
017_HitOrMiss/: CMakeLists.txt  main.cpp
018_ExtractHorizontalAndVerticalLinesByUsingMorphological/: CMakeLists.txt  main.cpp
019_ImagePyramids/: CMakeLists.txt  main.cpp
020_BasicThresholdingOperations/: CMakeLists.txt  main.cpp
021_ThresholdingOperationsUsingInRange/: CMakeLists.txt  main.cpp
022_MakingYourOwnLineearFilters/: CMakeLists.txt  main.cpp
023_AddingBordersToYourImages/: CMakeLists.txt  main.cpp
024_SobelDerivatives/: CMakeLists.txt  main.cpp
025_LaplaceOperator/: CMakeLists.txt  main.cpp
026_CannyEdgeDetector/: CMakeLists.txt  main.cpp
027_HoughLineTransform/: CMakeLists.txt  main.cpp
028_HoughLineTransformAdvanced/: CMakeLists.txt  main.cpp
029_HoughCircleTransform/: CMakeLists.txt  main.cpp
030_HoughCircleTransformAdvanced/: CMakeLists.txt  main.cpp
031_ObjectDetectionWithGeneralizedBallardAndGuilHoughTransform/: CMakeLists.txt  main.cpp
032_Remapping/: CMakeLists.txt  main.cpp
033_AffineTransformations/: CMakeLists.txt  main.cpp
034_HistogramEqualization/: CMakeLists.txt  main.cpp
035_HistogramCalculation/: CMakeLists.txt  main.cpp
036_HistogramComparison/: CMakeLists.txt  main.cpp
037_BackProjection/: CMakeLists.txt  main.cpp
038_TemplateMatching/: CMakeLists.txt  main.cpp
039_FindingContoursInYourImage/: CMakeLists.txt  main.cpp
040_ConvexHull/: CMakeLists.txt  main.cpp
041_CreatingBoundingBoxesAndCirclesForContours/: CMakeLists.txt  main.cpp
042_ImageMoments/: CMakeLists.txt  main.cpp
043_PointPolygonTest/: CMakeLists.txt  main.cpp
044_ImageSegmentationWithDistanceTransformAndWatershedAlgorithm/: CMakeLists.txt  keywords  main.cpp
045_OutOfFocusDeblurFilter/: CMakeLists.txt  main.cpp
046_MotionDeblurFilter/: CMakeLists.txt  main.cpp
047_AnisotropicImageSegmentationByAGradientStructureTensor/: CMakeLists.txt  main.cpp
048_PeriodicNoiseRemovingFilter/: CMakeLists.txt  main.cpp
049_AddingATrackbarToOurApplications/: CMakeLists.txt  main.cpp
050_ReadingGeospatialRasterFilesWithGDAL/: CMakeLists.txt  main.cpp
1-HelloCV/: CMakeLists.txt  main.cpp
Demos/HistogramMatching/: CMakeLists.txt  main.cpp
